--- a/locales/en.json
+++ b/locales/en.json
@@ -1,11 +1,13 @@
 {
 	"pair": {
 		"start": {
-      "intro": "Enter your device's IP address.",
+      "intro": "Enter your device's IP address and Device Nr and give it a name.",
 			"title": "Finding device...",
 			"error": "An error has occurred.",
-      "required": "IP address is a required value.",
+      "required": "IP address and Device Nr is a required value.",
       "ipAddress": "IP address",
+			"deviceNr": "Device Nr",
+			"deviceName": "Device name",
       "saveSettings": "Save settings"
 		}
   }
